--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -20,22 +20,7 @@
   </properties>
 
   <dependencies>
-	<dependency>
-		<groupId>org.hibernate</groupId>	
-		<artifactId>hibernate-core</artifactId>
-		<version>5.4.12.Final</version>
-	</dependency>
-	<dependency>
-		<groupId>org.hibernate</groupId>
-		<artifactId>hibernate-entitymanager</artifactId>
-		<version>5.4.12.Final</version>
-	</dependency>
-	<dependency>
-		<groupId>mysql</groupId>
-		<artifactId>mysql-connector-java</artifactId>
-		<version>8.0.19</version>
-	</dependency>
-    
+    <!-- TODO: Inserir as dependências do sistema... -->
   </dependencies>
 
 </project>
